horizontal scrolling fixed

--- a/assets/css/prose.css
+++ b/assets/css/prose.css
@@ -16,7 +16,7 @@
 
 .gevamu-prose {
   @apply prose print:max-w-[100ch]
-    max-w-[none]
+    lg:max-w-[95%]
     prose-headings:no-underline
     print:prose-pre:whitespace-normal
     marker:prose-ul:text-accent-200 marker:prose-ol:text-accent-700;
